[gd_scene load_steps=11 format=3 uid="uid://bvgh060edrp7j"]

[ext_resource type="Script" uid="uid://btvd0b0skhsfa" path="res://src/MainMenu/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://oujy4qm2cxuw" path="res://assets/sprites/upgrade_selector/corkboard.png" id="3_ah704"]
[ext_resource type="Texture2D" uid="uid://dp404qpcukqlu" path="res://assets/title.png" id="4_ah704"]
[ext_resource type="PackedScene" uid="uid://dhgdrpyw1grua" path="res://src/MainMenu/menu_card.tscn" id="6_tcb8k"]
[ext_resource type="Texture2D" uid="uid://c62i6skru1bys" path="res://assets/sprites/heart_full.png" id="7_aeosc"]
[ext_resource type="Texture2D" uid="uid://b5sclmcm17c1w" path="res://assets/sprites/collectibles/dollar_wad.png" id="8_olvkn"]
[ext_resource type="Texture2D" uid="uid://i114lrloa1sh" path="res://assets/sprites/postjam_badge.png" id="14_e1bcd"]
[ext_resource type="Theme" uid="uid://ciubrukaih6sc" path="res://assets/default_theme.tres" id="15_20hqm"]
[ext_resource type="PackedScene" uid="uid://ce2sti7fbkmul" path="res://src/UpgradeSelector/cursor.tscn" id="15_k4wgw"]

[sub_resource type="LabelSettings" id="LabelSettings_k4wgw"]
font_size = 30
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ah704")

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 544.0
offset_top = 20.0
offset_right = 1056.0
offset_bottom = 210.0
texture = ExtResource("4_ah704")
expand_mode = 2
stretch_mode = 4

[node name="PostJamBadge" type="Control" parent="."]
anchors_preset = 0
offset_left = 41.0
offset_top = 23.0
offset_right = 41.0
offset_bottom = 23.0

[node name="TextureRect" type="TextureRect" parent="PostJamBadge"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 163.0
texture = ExtResource("14_e1bcd")
expand_mode = 1

[node name="Label" type="Label" parent="PostJamBadge"]
layout_mode = 0
offset_left = 90.0
offset_top = 59.0
offset_right = 312.0
offset_bottom = 94.0
theme = ExtResource("15_20hqm")
text = "Postjam version"
label_settings = SubResource("LabelSettings_k4wgw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameCard" parent="." instance=ExtResource("6_tcb8k")]
layout_mode = 0
offset_left = 310.0
offset_top = 207.0
offset_right = 730.0
offset_bottom = 807.0

[node name="TitleLabel" parent="StartGameCard/VBoxContainer" index="0"]
text = "Start the game"

[node name="IconTextureRect" parent="StartGameCard/VBoxContainer" index="2"]
texture = ExtResource("7_aeosc")

[node name="MarginContainer2" parent="StartGameCard/VBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 0)

[node name="DescriptionLabel" parent="StartGameCard/VBoxContainer" index="4"]
text = "The infamous multi-billionaire Felon Zuckerbezos is suspected of tax fraud..."

[node name="SecondDescription" parent="StartGameCard/VBoxContainer" index="5"]
text = "Make him pay!"

[node name="CreditsCard" parent="." instance=ExtResource("6_tcb8k")]
layout_mode = 0
offset_left = 915.0
offset_top = 210.0
offset_right = 1335.0
offset_bottom = 810.0

[node name="TitleLabel" parent="CreditsCard/VBoxContainer" index="0"]
text = "Credits"

[node name="IconTextureRect" parent="CreditsCard/VBoxContainer" index="2"]
texture_filter = 1
texture = ExtResource("8_olvkn")

[node name="MarginContainer2" parent="CreditsCard/VBoxContainer" index="3"]
custom_minimum_size = Vector2(0, 22)

[node name="DescriptionLabel" parent="CreditsCard/VBoxContainer" index="4"]
text = "A game by the Ludum Darons"

[node name="SecondDescription" parent="CreditsCard/VBoxContainer" index="5"]
text = "Discover the team"

[node name="Cursor" parent="." instance=ExtResource("15_k4wgw")]
unique_name_in_owner = true
position = Vector2(680, 964)

[connection signal="card_selected" from="StartGameCard" to="." method="_on_start_game_card_card_selected"]
[connection signal="card_selected" from="CreditsCard" to="." method="_on_credits_card_card_selected"]

[editable path="StartGameCard"]
[editable path="CreditsCard"]
